--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,9 @@
 
     /* -- Font Family -- */
     --ff-headings: 'Big Shoulders Display';
-    --ff-paragraphs: 'Lexend Deca';   
+    --ff-paragraphs: 'Lexend Deca';
+    
+    --bdr-rad-container: 10px;
 }
 
 *,
@@ -30,7 +32,7 @@ html {
 }
 
 .third {
-    padding: 10%;
+    padding: 12%;
 }
 
 h1 {
@@ -38,29 +40,74 @@ h1 {
     color: var(--clr-text-h);
     font-size: 3rem;
     letter-spacing: 1px;
+    margin: 30px 0;
 }
 
 p {
     font-family: var(--ff-paragraphs);
     color: var(--clr-text-p);
+    line-height: 2em;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
 }
 
 button {
-    padding: 5%;
+    padding: 10px 30px;
     border-style: none;
     border-radius: 25px;
-    color: --;
 }
 
 /**** Section Styles ****/
 #sedan {
     background-color: var(--clr-bg-sedan);
+    border-start-start-radius: var(--bdr-rad-container);
+    border-start-end-radius: var(--bdr-rad-container);
+}
+
+#sedan button {
+    color: var(--clr-bg-sedan);
 }
 
 #suv {
     background-color: var(--clr-bg-suv);
 }
 
+#suv button {
+    color: var(--clr-bg-suv);
+}
+
 #luxury {
     background-color: var(--clr-bg-luxury);
+    border-end-start-radius: var(--bdr-rad-container);
+    border-end-end-radius: var(--bdr-rad-container);
+}
+
+#luxury button {
+    color: var(--clr-bg-luxury);
+}
+
+@media (min-width: 1440px) {
+    .container {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .third {
+        padding: 4%;
+    }
+
+    p {
+        margin: 30px 0 100px 0;
+        max-width: 250px;
+    }
+
+    #sedan {
+        border-end-start-radius: var(--bdr-rad-container);
+        border-start-end-radius: 0;
+    }
+
+    #luxury {
+        border-start-end-radius: var(--bdr-rad-container);
+        border-end-start-radius: 0;
+    }
 }
