--- a/css/main.css
+++ b/css/main.css
@@ -112,10 +112,16 @@ button {
     border: 2px solid var(--clr-text-h);
 }
 
+.attribution {
+    display: flex;
+    justify-content: center;
+}
+
 @media (min-width: 1440px) {
     .container {
         display: flex;
         flex-direction: row;
+        justify-content: center;
     }
 
     .third {
